tests: implemented update note tests, minor code cleaning